@startuml
title WorkoutUseCaseFactory & UseCases (OCP-konform)

' === UseCase Layer ===
package "core.usecase.workout" {
  class WorkoutUseCaseFactory {
    +generateRandomWorkoutUseCase()
    +createCustomWorkoutUseCase()
    +getUserWorkoutsUseCase()
    +removeWorkoutUseCase()
  }

  class GenerateRandomWorkoutUseCase {
    +generate(name, type, split, frequency) : List<Workout>
  }

  class CreateCustomWorkoutUseCase {
    +create(name, type, days) : Workout
  }

  class GetUserWorkoutsUseCase {
    +getUserWorkouts() : List<Workout>
  }

  class RemoveWorkoutUseCase {
    +removeWorkout(id) : boolean
  }
}

' === Interfaces ===
package "core.ports.workout" {
  interface ICustomWorkoutGenerator {
    +create(name, type, days, username) : Workout
  }

  interface IRandomWorkoutGenerator {
    +generate(baseName, type, split, frequency, username) : List<Workout>
  }
}

package "core.ports.repository" {
  interface IWorkoutRepository {
    +saveWorkout(workout)
    +deleteById(id)
    +findByUser(username) : List<Workout>
  }
}

package "core.ports.session" {
  interface IUserSessionService {
    +getLoggedInUser() : Optional<User>
  }
}

' === Beziehungen ===

WorkoutUseCaseFactory --> GenerateRandomWorkoutUseCase
WorkoutUseCaseFactory --> CreateCustomWorkoutUseCase
WorkoutUseCaseFactory --> GetUserWorkoutsUseCase
WorkoutUseCaseFactory --> RemoveWorkoutUseCase

WorkoutUseCaseFactory --> IWorkoutRepository
WorkoutUseCaseFactory --> IUserSessionService
WorkoutUseCaseFactory --> ICustomWorkoutGenerator
WorkoutUseCaseFactory --> IRandomWorkoutGenerator





@enduml
